--- a/hello2.ipynb
+++ b/hello2.ipynb
@@ -27,6 +27,8 @@
     "\n",
     "\n",
     "def create_file(path, content):\n",
+    "    # Create any directories that don't exist\n",
+    "    os.makedirs(os.path.dirname(os.path.join(SANDBOX_DIR, path)), exist_ok=True)\n",
     "    with open(os.path.join(SANDBOX_DIR, path), \"w\") as f:\n",
     "        f.write(content)\n",
     "    print(f\"Created file {os.path.join(SANDBOX_DIR, path)}\")\n",
@@ -34,17 +36,22 @@
     "# Does the same thing as create_file - but nice to have a separate function for updating files\n",
     "# So the LLM has the option to update files if it wants to - if that makes more sense than creating a new file\n",
     "def update_file(path, content):\n",
+    "    os.makedirs(os.path.dirname(os.path.join(SANDBOX_DIR, path)), exist_ok=True)\n",
     "    with open(os.path.join(SANDBOX_DIR, path), \"w\") as f:\n",
     "        f.write(content)\n",
     "    print(f\"Updated file {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
     "def delete_file(path):\n",
+    "    # If the file doesn't exist, don't do anything\n",
+    "    if not os.path.exists(os.path.join(SANDBOX_DIR, path)):\n",
+    "        print(f\"Tried to delete file {os.path.join(SANDBOX_DIR, path)} but it does not exist\")\n",
+    "        return\n",
     "    os.remove(os.path.join(SANDBOX_DIR, path))\n",
     "    print(f\"Deleted file {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
-    "def make_dir(path):\n",
-    "    os.makedirs(os.path.join(SANDBOX_DIR, path), exist_ok=True)\n",
-    "    print(f\"Created directory {os.path.join(SANDBOX_DIR, path)}\")\n",
+    "# def make_dir(path):\n",
+    "#     os.makedirs(os.path.join(SANDBOX_DIR, path), exist_ok=True)\n",
+    "#     print(f\"Created directory {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
     "TOOLS = [\n",
     "    {\n",
@@ -133,8 +140,8 @@
     "        update_file(arguments[\"path\"], arguments[\"content\"])\n",
     "    elif tool_call.function.name == \"delete_file\":\n",
     "        delete_file(arguments[\"path\"])\n",
-    "    elif tool_call.function.name == \"make_dir\":\n",
-    "        make_dir(arguments[\"path\"])\n"
+    "    # elif tool_call.function.name == \"make_dir\":\n",
+    "    #     make_dir(arguments[\"path\"])\n"
    ]
   },
   {
@@ -238,7 +245,7 @@
     "        {\"role\": \"system\", \"content\": CODER_AGENT_SYSTEM_PROMPT},\n",
     "        {\"role\": \"user\", \"content\": f\"\"\"\n",
     "         Create a step by step plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\n",
-    "         You have 4 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path), make_dir(path).\n",
+    "         You have 4 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path).\n",
     "         Limit your step by step plan to only these operations.\n",
     "         Please include a README.md file in the root of the codebase that describes the codebase and how to run it.\n",
     "         Please include a requirements.txt file in the root of the codebase that describes the dependencies of the codebase.\n",
@@ -314,7 +321,7 @@
     "    for root, dirs, files in os.walk(SANDBOX_DIR):\n",
     "        for file in files:\n",
     "            # concatenate the file name\n",
-    "            contents += f\"filename: {file} ---\\n\"\n",
+    "            contents += f\"file: {file}:\\n\"\n",
     "            with open(os.path.join(root, file), \"r\") as f:\n",
     "                contents += f.read()\n",
     "            contents += \"EOF\\n\\n\"\n",
