--- a/hello2.ipynb
+++ b/hello2.ipynb
@@ -58,7 +58,7 @@
     "        \"type\": \"function\",\n",
     "        \"function\": {\n",
     "            \"name\": \"create_file\",\n",
-    "            \"description\": \"Create a file with the given name and content\",\n",
+    "            \"description\": \"Create a file with the given name and content. If there are any directories that don't exist, create them.\",\n",
     "            \"parameters\": {\n",
     "                \"type\": \"object\",\n",
     "                \"properties\": {\n",
@@ -79,7 +79,7 @@
     "        \"type\": \"function\",\n",
     "        \"function\": {\n",
     "            \"name\": \"update_file\",\n",
-    "            \"description\": \"Update a file with the given name and content\",\n",
+    "            \"description\": \"Update a file with the given name and content. If the file does not exist, create it.\",\n",
     "        },\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
@@ -100,7 +100,7 @@
     "        \"type\": \"function\",\n",
     "        \"function\": {\n",
     "            \"name\": \"delete_file\",\n",
-    "            \"description\": \"Update a file with the given name and content\",\n",
+    "            \"description\": \"Delete a file with the given path. If the file does not exist, do nothing.\",\n",
     "        },\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
@@ -326,7 +326,6 @@
     "                contents += f.read()\n",
     "            contents += \"EOF\\n\\n\"\n",
     "    return contents\n",
-    "print(get_codebase_contents())\n",
     "\n",
     "# Review agent reviews the code\n",
     "# REVIEWER_AGENT_SYSTEM_PROMPT=f\"\"\"\n",
